--- a/src/index.css
+++ b/src/index.css
@@ -288,7 +288,7 @@ footer{
 }
 
 .text--section{
-  height: 70vh;
+  height: 60vh;
 }
 
 .slider--section{
@@ -497,10 +497,41 @@ footer{
 
 .hero--girl{
   width: 100%;
-  height: 70vh;
+  height: 60vh;
 }
 
 .testimonial-item{
   border-radius: 15px;
   padding: 2rem 1rem;
+}
+
+.text--section{
+  display: grid;
+}
+
+.main--sidebar{
+  position:fixed;
+  width: 20vw;
+  height: 100vh;
+  background: red;
+  top: 0;
+  left: -20vw;
+  transition: all 150ms;
+  z-index: 20;
+}
+
+.overlay{
+  position: fixed;
+  width: 0;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.8);
+  z-index: 10;
+}
+.overlay.active{
+  width: 100vw;
+}
+
+
+.main--sidebar.active{
+  left: 0;
 }
