--- a/src/index.css
+++ b/src/index.css
@@ -87,6 +87,17 @@ header.scrolled{
 animation:spin 1s ease-in-out infinite;
 }
 
+@keyframes spin {
+  0% {
+    -webkit-transform: rotate(0deg);
+    transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+    transform: rotate(360deg);
+  }
+}
+
 .ant-modal-mask{
 background-color: rgba(0, 0, 0, 0.75) !important;
 }
@@ -179,6 +190,10 @@ top: 0px;
 right: -5px;
 font-size: 2.75rem;
 
+}
+
+.ant-tabs-tabpane{
+  padding: 0 !important; 
 }
 
 .ant-tabs-tab{
@@ -540,4 +555,8 @@ footer{
 
 .main--sidebar.active{
   left: 0;
+}
+
+.admin--menu{
+  height: calc(100vh - 3rem);
 }
