--- a/src/index.css
+++ b/src/index.css
@@ -399,14 +399,14 @@ footer{
   width: 3rem;
   height: 3rem;
   border-radius: 3rem;
-  background-color: #DA0037;
+  border: 1px solid black;
 }
 
 .profile-photo-comment{
   width: 2rem;
   height: 2rem;
   border-radius: 2rem;
-  background-color: #DA0037;
+  border: 1px solid black;
 }
 
 .flow-item-header{
@@ -755,4 +755,22 @@ footer{
 
 .ant-collapse-borderless{
   background: none !important;
+}
+
+.post--detail{
+  height: calc(100vh - 3rem);
+}
+
+.ant-collapse-header{
+  display: flex;
+  align-items: center;
+  font-weight: 600;
+  font-size: .75rem;
+  padding: 12px 16px 6px 16px;
+}
+.user-image{
+  width: 100%;
+  height: 100%;
+
+  object-fit: cover;
 }
